correct spacing

--- a/src/Page/NgHiring/Ouralumni/styles.css
+++ b/src/Page/NgHiring/Ouralumni/styles.css
@@ -34,7 +34,7 @@
 }
 
 .meetclass{
-  margin-top: 48px;
+  margin-top: 60px;
 }
 
 @media screen and (max-width: 667px) {
