--- a/src/Page/NgHiring/Timeline/styles.css
+++ b/src/Page/NgHiring/Timeline/styles.css
@@ -30,7 +30,7 @@
 }
 
 .timelinetext{
-  margin-top: 20px;
+  margin-top: 48px;
 }
 
 @media (max-width: 768px) {
